# MobileAutomation

./: .gitignore  README.md  pyproject.toml  pytest.ini
automation_framework/: __init__.py  __main__.py
automation_framework/config/: default.yaml
automation_framework/lib/adb/: __init__.py  client.py
automation_framework/lib/appium/: __init__.py  client.py  health.py  ports.py  server.py
automation_framework/lib/context/: __init__.py  test_context.py
automation_framework/lib/device/: __init__.py  discovery.py  info.py  scheduler.py  worker.py
automation_framework/lib/environment/: checker.py
automation_framework/lib/log/: __init__.py  crash_detector.py  logcat.py  sanitizer.py
automation_framework/lib/performance/: __init__.py  base.py  cpu.py  memory.py
automation_framework/lib/report/: aggregator.py  case_report.py  schema.py
automation_framework/lib/utils/: config_loader.py  file.py  retry.py  time.py
