[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-framework"
version = "0.2.0"
description = "Mobile UI Automation Testing Framework - Android first, iOS ready"
requires-python = ">=3.10"
dependencies = [
    "Appium-Python-Client>=3.0.0",
    "PyYAML>=6.0",
    "pytest>=7.4",
    "pytest-rerunfailures>=12.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest-xdist>=3.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["automation_framework*", "pages*"]

[project.scripts]
automation-framework = "automation_framework.__main__:main"
